<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.films.FilmsActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/login_screen_netflix_size"
        android:layout_height="@dimen/login_screen_netflix_size"
        android:layout_marginStart="@dimen/login_screen_netflix_margin"
        android:layout_marginTop="@dimen/login_screen_netflix_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_screen_netflix_margin"
        android:layout_marginTop="@dimen/films_screen_title_margin"
        android:text="@string/films_screen_result"
        android:textColor="@color/white"
        android:textSize="@dimen/login_margin"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_screen_netflix_margin"
        android:background="@color/white"
        android:text="@string/sort_result"
        android:textSize="@dimen/login_screen_netflix_margin"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Switch
        android:id="@+id/switchGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/films_screen_switch_margin_right"
        android:background="@drawable/rounded_edit_text_background"
        android:padding="@dimen/login_padding"
        android:text="@string/grid"
        android:textColor="@color/white"
        android:textSize="@dimen/login_screen_netflix_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSort" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvFilms"
        android:layout_width="match_parent"
        android:layout_height="@dimen/autofill_size"
        android:layout_marginTop="@dimen/login_screen_netflix_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSort"
        tools:listitem="@layout/cardview_film" />

</androidx.constraintlayout.widget.ConstraintLayout>